config/100-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: catspace
  labels:
    istio-injection: enabled
