config/200-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats
  namespace: catspace
  labels:
    app: cats
spec:
  minReadySeconds: 5
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: cats
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: cats
        version: production
    spec:
      containers:
      - name: catservice
        image: github.com/bobcatfish/catservice
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
