config/400-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats-service
  namespace: catspace
  labels:
    app: cats
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: cats
