config/600-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cats-virtualservice
  namespace: catspace
spec:
  hosts:
  - "*"
  gateways:
  - cats-gateway
  http:
  - route:
    - destination:
        host: cats-service
        subset: production
      weight: 100
