config/700-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cats-destinationrule
  namespace: catspace
spec:
  host: cats-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: production
    labels:
      version: production
